# wireguard2clash

./: Cargo.toml  ipv6.csv  result.csv  wg-config.conf
rules/: direct.txt  gfw.txt  proxy.txt  reject.txt  数据来源.txt
src/: clash_config.rs  clash_rules.rs  main v1.rs  main v2.rs  main v3(处理规则文件).rs  main.rs  main_05_group.rs  main_13_group.rs  proxy_groups.rs
src/utils/: base.rs  config.rs  csv.rs  delete.rs  ips.rs  mod.rs  vector.rs  wireguard.rs
test/: v3-处理规则文件.rs  从网络上下载规则，拼接成clash的规则.rs  选择其中一个向量.rs
