[package]
name = "wireguard2clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
serde_json = "1.0.113"
serde_yaml = "0.9.32"
serde = { version = "1.0", features = ["derive"] }

# [[bin]]
# name = "v1"
# path = "src/main v1.rs" # 最早开发哪个版本，规则和分组粗浅，能够使用


[[bin]]
name = "v2"
path = "src/main v2.rs" # 生成13个代理组的源码

# [[bin]]
# name = "app"
# path = "src/main v3(处理规则文件).rs" # 这个代码辅助生成rules规则(应用到5个代理组的源码中)

[[bin]]
name = "v3"
path = "src/main.rs" # 生成5个代理组的源码