[package]
name = "wireguard2clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.20.0"
serde_json = "1.0.119"
serde_yaml = "0.9.33"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }

[[bin]]
name = "13"
path = "src/main_13_group.rs" # 生成13个代理组的源码（规则只有9万多行）

[[bin]]
name = "5"
path = "src/main_05_group.rs" # 生成5个代理组的源码（规则有17万多行，生成的配置文件体积比较大）

[[bin]]
name = "rules"
path = "test/从网络上下载规则，拼接成clash的规则.rs" # 这个代码辅助生成rules规则(可以应用到生成5个代理组的rules中)

[[bin]]
name = "main"
path = "src/main.rs" # 只使用csv文件的数据生成clash的配置文件

# [[bin]]
# name = "vec"
# path = "test/选择其中一个向量.rs" # 从两个向量中，选择一个向量
